virt01/manual/torrent/prowlarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        backup.velero.io/backup-volumes: prowlarr-pv
        # Opts this pod into the pod-gateway webhook (VPN egress routing).
        setGateway: "true"
    spec:
      serviceAccountName: prowlarr-sa
      containers:
        - name: prowlarr
          image: harbor.nf.lab/proxy.docker.io/linuxserver/prowlarr:nightly
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
              name: prowlarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: prowlarr-pv
              mountPath: /config
      volumes:
        - name: prowlarr-pv
          persistentVolumeClaim:
            claimName: prowlarr-pvc
