virt01/manual/torrent/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  labels:
    app: prowlarr
spec:
  ports:
    - port: 9696
      protocol: TCP
      name: prowlarr-svc-port
  selector:
    app: prowlarr
